--- a/Notebooks/Listing URL Scraper.ipynb
+++ b/Notebooks/Listing URL Scraper.ipynb
@@ -3,106 +3,86 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1d761d1c",
+   "id": "9f8b85d8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from splinter import Browser\n",
-    "from bs4 import BeautifulSoup\n",
-    "from webdriver_manager.chrome import ChromeDriverManager\n"
+    "# from splinter import Browser\n",
+    "# from bs4 import BeautifulSoup\n",
+    "# from webdriver_manager.chrome import ChromeDriverManager\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0f38a621",
+   "id": "2ba08f40",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WDM] - ====== WebDriver manager ======\n",
-      "[WDM] - Current google-chrome version is 102.0.5005\n",
-      "[WDM] - Get LATEST chromedriver version for 102.0.5005 google-chrome\n",
-      "[WDM] - About to download new driver from https://chromedriver.storage.googleapis.com/102.0.5005.61/chromedriver_win32.zip\n",
-      "[WDM] - Driver has been saved in cache [C:\\Users\\Rob\\.wdm\\drivers\\chromedriver\\win32\\102.0.5005.61]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Setup splinter\n",
-    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
-    "browser = Browser('chrome', **executable_path, headless=False)"
+    "# executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "# browser = Browser('chrome', **executable_path, headless=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "f90a80e6",
+   "execution_count": 3,
+   "id": "d208cadb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# setup variables for scraping\n",
-    "zipcodes = [76012]\n",
+    "zipcodes = [76012 # Arlington, TX\n",
+    "#             ,78234 # San Antonio, TX\n",
+    "#             ,78704 # Austin\n",
+    "#             ,77033 # Houston\n",
+    "           ]\n",
     "\n",
-    "radius = 50\n",
+    "radius = 50 #miles\n",
     "\n",
+    "# Commas before each list item are non-standard and ugly, but they let us \n",
+    "# comment out what lines we need without deleting or writing commas.\n",
+    "\n",
+    "# You can comment out individual models, but if you comment out a make,\n",
+    "# you need to comment out the whole dictionary that follows.\n",
     "cargurus = {\n",
     "    'ford': {\n",
-    "        'bronco': ['d320'],\n",
-    "        'maverick': ['d1293']\n",
+    "        'bronco': ['d320']\n",
+    "#         ,'maverick': ['d1293']\n",
     "    }\n",
     "    \n",
-    "    ,'gmc': {\n",
-    "        'hummer ev': ['d3104']\n",
-    "    }\n",
+    "#     ,'gmc': {\n",
+    "#         'hummer ev': ['d3104']\n",
+    "#     }\n",
     "    \n",
-    "    ,'chevrolet': {\n",
-    "        'blazer': ['d602']\n",
-    "    }\n",
+    "#     ,'chevrolet': {\n",
+    "#         'blazer': ['d602']\n",
+    "#     }\n",
     "    \n",
-    "    ,'jeep': {\n",
-    "        'wrangler' : ['d494', 'd2412', 'd3134']\n",
-    "    }\n",
+    "#     ,'jeep': {\n",
+    "#         'wrangler' : ['d494', 'd2412', 'd3134']\n",
+    "#     }\n",
     "    \n",
-    "    ,'toyota': {\n",
-    "        'tundra' : ['d313']\n",
-    "    }\n",
+    "#     ,'toyota': {\n",
+    "#         'tundra' : ['d313']\n",
+    "#     }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "18022cb1",
-   "metadata": {},
+   "execution_count": 4,
+   "id": "3c29c191",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d320\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d1293\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d3104\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d602\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d494\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d2412\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d3134\n",
       "\n"
      ]
     }
@@ -133,8 +113,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "a117f8fa",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>urls</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                urls\n",
+       "0  https://www.cargurus.com/Cars/new/searchresult..."
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url_df = pd.DataFrame({\n",
+    "    \"urls\": scrapeURLs\n",
+    "})\n",
+    "url_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "beed7c7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_df.to_csv(\"../Resources/base_url_list.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c8dc64ff",
+   "id": "ff10caf7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -156,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
