notebook for scraping

--- a/Notebooks/URL_List_Generator.ipynb
+++ b/Notebooks/URL_List_Generator.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "955947ec",
+   "metadata": {},
+   "source": [
+    "# Generates lists of url for further scraping"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "9f8b85d8",
