--- a/Notebooks/scraping_car_url.ipynb
+++ b/Notebooks/scraping_car_url.ipynb
@@ -2,23 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d950b838",
+   "execution_count": 48,
+   "id": "c39a2f19",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup as bs\n",
-    "from webdriver_manager.chrome import ChromeDriverManager\n"
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from suffix import suffix\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c4ed690b",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 49,
+   "id": "619c6a29",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - ====== WebDriver manager ======\n",
+      "[WDM] - Current google-chrome version is 103.0.5060\n",
+      "[WDM] - Get LATEST chromedriver version for 103.0.5060 google-chrome\n",
+      "[WDM] - Driver [/Users/andrealynnbaker/.wdm/drivers/chromedriver/mac64/103.0.5060.53/chromedriver] found in cache\n"
+     ]
+    }
+   ],
    "source": [
     "# Setup splinter\n",
     "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
@@ -27,19 +48,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a8f5427c",
+   "execution_count": 50,
+   "id": "65c92bfe",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>urls</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                urls\n",
+       "0  https://www.cargurus.com/Cars/new/searchresult..."
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url_df = pd.read_csv(\"../Resources/base_url_list.csv\")\n",
+    "\n",
+    "url_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "141a4f1e",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d320'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " url_list = []\n",
+    "    \n",
+    "# for index, row in url_df.iterrows():\n",
+    "#     url_list.append(row[\"url_df\"])\n",
+    "url_list = url_df[\"urls\"]  \n",
+    "url_list\n",
+    "\n",
+    "url_list[0]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "bc34e4c5",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "soup = bs(html_string, 'html.parser')\n",
-    "type(soup)"
+    "\n",
+    "for url in url_list:\n",
+    "    soup = bs(url, \"html.parser\")\n",
+    "    type(soup)\n",
+    "    \n",
+    "\n",
+    "    #soup.find_all(\"a\", href=re.compile(r\"^#listing=\"))\n",
+    "#     suffix = soup.find_all(\"a\", href=lambda href: href and href.startswith(\"#listing\"))\n",
+    "    \n",
+    "# suffix\n",
+    "\n",
+    "    links = browser.find_link_by_partial_href(\"#listing\")\n",
+    "    results = []\n",
+    "    for link in links:\n",
+    "        results.append(link.value)\n",
+    "        \n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "407da3de",
+   "id": "10f2b5f4",
    "metadata": {},
    "outputs": [],
    "source": []
