issues with click next

--- a/Notebooks/URL_List_Generator.ipynb
+++ b/Notebooks/URL_List_Generator.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "9f8b85d8",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "2ba08f40",
    "metadata": {},
    "outputs": [],
@@ -42,9 +42,9 @@
    "source": [
     "# setup variables for scraping\n",
     "zipcodes = [76012 # Arlington, TX\n",
-    "            ,78234 # San Antonio, TX\n",
-    "            ,78704 # Austin\n",
-    "            ,77033 # Houston\n",
+    "#             ,78234 # San Antonio, TX\n",
+    "#             ,78704 # Austin\n",
+    "#             ,77033 # Houston\n",
     "           ]\n",
     "\n",
     "radius = 50 #miles\n",
@@ -57,24 +57,24 @@
     "cargurus = {\n",
     "    'ford': {\n",
     "        'bronco': ['d320']\n",
-    "         ,'maverick': ['d1293']\n",
+    "#          ,'maverick': ['d1293']\n",
     "    }\n",
     "    \n",
-    "     ,'gmc': {\n",
-    "         'hummer ev': ['d3104']\n",
-    "     }\n",
+    "#      ,'gmc': {\n",
+    "#          'hummer ev': ['d3104']\n",
+    "#      }\n",
     "    \n",
-    "     ,'chevrolet': {\n",
-    "         'blazer': ['d602']\n",
-    "     }\n",
+    "#      ,'chevrolet': {\n",
+    "#          'blazer': ['d602']\n",
+    "#      }\n",
     "    \n",
-    "     ,'jeep': {\n",
-    "         'wrangler' : ['d494', 'd2412', 'd3134']\n",
-    "     }\n",
+    "#      ,'jeep': {\n",
+    "#          'wrangler' : ['d494', 'd2412', 'd3134']\n",
+    "#      }\n",
     "    \n",
-    "     ,'toyota': {\n",
-    "         'tundra' : ['d313']\n",
-    "     }\n",
+    "#      ,'toyota': {\n",
+    "#          'tundra' : ['d313']\n",
+    "#      }\n",
     "}"
    ]
   },
@@ -91,68 +91,6 @@
      "output_type": "stream",
      "text": [
       "https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d320\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d1293\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d3104\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d602\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d494\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d2412\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d3134\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d313\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=78234&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d320\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=78234&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d1293\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=78234&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d3104\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=78234&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d602\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=78234&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d494\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=78234&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d2412\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=78234&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d3134\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=78234&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d313\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=78704&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d320\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=78704&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d1293\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=78704&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d3104\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=78704&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d602\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=78704&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d494\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=78704&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d2412\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=78704&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d3134\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=78704&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d313\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=77033&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d320\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=77033&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d1293\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=77033&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d3104\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=77033&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d602\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=77033&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d494\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=77033&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d2412\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=77033&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d3134\n",
-      "\n",
-      "https://www.cargurus.com/Cars/new/searchresults.action?zip=77033&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d313\n",
       "\n"
      ]
     }
@@ -218,168 +156,13 @@
        "      <th>0</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                 urls\n",
-       "0   https://www.cargurus.com/Cars/new/searchresult...\n",
-       "1   https://www.cargurus.com/Cars/new/searchresult...\n",
-       "2   https://www.cargurus.com/Cars/new/searchresult...\n",
-       "3   https://www.cargurus.com/Cars/new/searchresult...\n",
-       "4   https://www.cargurus.com/Cars/new/searchresult...\n",
-       "5   https://www.cargurus.com/Cars/new/searchresult...\n",
-       "6   https://www.cargurus.com/Cars/new/searchresult...\n",
-       "7   https://www.cargurus.com/Cars/new/searchresult...\n",
-       "8   https://www.cargurus.com/Cars/new/searchresult...\n",
-       "9   https://www.cargurus.com/Cars/new/searchresult...\n",
-       "10  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "11  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "12  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "13  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "14  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "15  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "16  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "17  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "18  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "19  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "20  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "21  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "22  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "23  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "24  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "25  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "26  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "27  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "28  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "29  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "30  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "31  https://www.cargurus.com/Cars/new/searchresult..."
+       "                                                urls\n",
+       "0  https://www.cargurus.com/Cars/new/searchresult..."
       ]
      },
      "execution_count": 9,
@@ -396,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "beed7c7e",
    "metadata": {},
    "outputs": [],
