url-scrape-step-1

--- a/Notebooks/scraping_car_url.ipynb
+++ b/Notebooks/scraping_car_url.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "528fbd73",
    "metadata": {
     "scrolled": true
@@ -36,7 +36,7 @@
       "[WDM] - ====== WebDriver manager ======\n",
       "[WDM] - Current google-chrome version is 103.0.5060\n",
       "[WDM] - Get LATEST chromedriver version for 103.0.5060 google-chrome\n",
-      "[WDM] - Driver [/Users/104rrc/.wdm/drivers/chromedriver/mac64/103.0.5060.53/chromedriver] found in cache\n"
+      "[WDM] - Driver [C:\\Users\\Rob\\.wdm\\drivers\\chromedriver\\win32\\103.0.5060.53\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "09934ae2",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
        "'https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d320'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,6 +390,78 @@
     "            if not(l in all_urls):\n",
     "                all_urls.append(l)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "46d84ae0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d320\n",
+      "\n",
+      "https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d320#resultsPage=2\n",
+      "\n",
+      "https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d320#resultsPage=3\n",
+      "\n",
+      "https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d320#resultsPage=4\n",
+      "\n",
+      "https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d320#resultsPage=5\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Take list of urls generated in step one.  For each url in step 1, \n",
+    "# this generates a list of pages for step 2 scraping\n",
+    "\n",
+    "url_step_2_list = []\n",
+    "\n",
+    "for url in url_list:\n",
+    "    \n",
+    "    browser.visit(url)\n",
+    "    \n",
+    "    \n",
+    "    # finds the number of pages needed to visit in this subset\n",
+    "    \n",
+    "    spans = browser.find_by_tag(\"span\")\n",
+    "\n",
+    "    for span in spans:\n",
+    "        if \"</strong> of <strong>\" in span.html:\n",
+    "            page_counter_html = span.html\n",
+    "    page_results = int(page_counter_html.split(\" - \")[1].split(\"</strong>\")[0])\n",
+    "    total_results = int(page_counter_html.split(\"of <strong>\")[1].split(\"</strong>\")[0])\n",
+    "\n",
+    "    results_mod = total_results % page_results\n",
+    "    numpages = int(total_results / page_results)\n",
+    "    if results_mod != 0:\n",
+    "        numpages += 1\n",
+    "\n",
+    "        \n",
+    "    # generate suffixes to add to base url\n",
+    "    suffixes = ['']\n",
+    "    for i in range(1,numpages):\n",
+    "        suffixes.append(f'#resultsPage={i+1}')\n",
+    "    suffixes\n",
+    "    \n",
+    "    for suffix in suffixes:\n",
+    "        url_step_2_list.append(url + suffix)\n",
+    "\n",
+    "for url in url_step_2_list:\n",
+    "    print(url)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56e251b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
