algorithm for finding car urls complete

--- a/Notebooks/scrape step 1.ipynb
+++ b/Notebooks/scrape step 1.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "0f60cc36",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "1bfba224",
    "metadata": {},
    "outputs": [
@@ -124,13 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "e44f07af",
    "metadata": {},
    "outputs": [],
    "source": [
     "url_step2_df = pd.DataFrame({\n",
-    "    'url': url_step_2_list\n",
+    "    'urls': url_step_2_list\n",
     "})\n",
     "url_step2_df.to_csv(\"../Resources/url_step_2.csv\", index=False)"
    ]
